fix: remove background animation to reduce flickering

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -158,7 +158,7 @@ svg:hover {
   width: 100%;
   background: linear-gradient(37deg, #000000, #2c093a, #3586c1);
   background-size: 180% 180%;
-  animation: gradient-animation 5s ease infinite;
+  /* animation: gradient-animation 5s ease infinite; */
 }
 
 @keyframes gradient-animation {
